// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LangSwitcher Не рендерит список языков по дефолту 1`] = `
<div
  className="LangSwitcher"
>
  <span
    className="LangSwitcher__selected-language"
    onClick={[Function]}
  >
    ru
  </span>
</div>
`;

exports[`LangSwitcher Рендерит список языков после клика 1`] = `
<div
  className="LangSwitcher"
>
  <span
    className="LangSwitcher__selected-language"
    onClick={[Function]}
  >
    ru
  </span>
  <div
    className="LangSwitcher__dropdown"
  >
    <div
      className="LangSwitcher__language"
      key="ru"
      onClick={[Function]}
    >
      ru
    </div>
    <div
      className="LangSwitcher__language"
      key="en"
      onClick={[Function]}
    >
      en
    </div>
  </div>
</div>
`;
